avBooth/booth-directive/booth-directive.less
/**
 * This file is part of voting-booth.
 * Copyright (C) 2015-2016  Sequent Tech Inc <legal@sequentech.io>

 * voting-booth is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License.

 * voting-booth  is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.

 * You should have received a copy of the GNU Affero General Public License
 * along with voting-booth.  If not, see <http://www.gnu.org/licenses/>.
**/

@supports (-ms-ime-align:auto) {
  [av-booth] .affix-bottom {
    min-height: 108px;
  }
}

[av-booth], .basic-booth-layout {

  .avb-content > .container {
    padding: 0;

    > .row {
      margin: 0;

      > .col-xs-12, > .col-sm-6 {
        padding: 0;
      }
    }
  }

  .padded {
    padding: 0 15px !important;
  }

  .padded-left {
    padding-left: 15px !important;
  }
  .padded-top {
    padding-top: 15px !important;
  }

  .padded-right {
    padding-right: 15px !important;
  }

  .booth-fixed-top {
    border: none;
    background-color: @av-primary;
    color: @btn-primary-color;
    padding: 5px;
    min-height: unset;
    margin-bottom: 0;
  }

  .avb-top-navbar {
    .center-col {
      padding: 0 15px;
    }

    .top-navbar-title {
      padding: 15px 0;
      font-size: 28px;
      font-weight: bold;
    }

    a {
      color: @av-secondary;

      &:hover {
        color: @av-secondary;
      }
    }

    span {
      cursor: pointer;
    }

    .glyphicon {
      cursor: pointer;
    }
  }

  .unfixed-top-height {
    max-height: 240px;
  }


  .navbar-unfixed-top {
    border: none;
    background-color: @av-primary;
    color: @btn-primary-color;
    width: 100%;
    margin: 0;
    margin-top: 20px;
    padding: 5px;
    transition: all .4s ease;

    &.collapsed {
      max-height: 240px;
      overflow-y: hidden;
    }

    h1 {
      margin-top: 0;
    }
  }

  .wrapper-unfixed:after {
    display: block;
    position: relative;
    bottom: 30px;
    width: 100%;
    height: 30px;
    content: " ";
  }

  #avb-toggle {
    z-index: 101;
    margin-top: -50px;
    width: 100%;
    margin-bottom: 30px;
  }

  #avb-toggle span {
    color: @av-secondary;
    cursor: pointer;
    transform: rotate(90deg);
  }

  .avb-toggle-span {
    cursor: pointer;
    transform: rotate(90deg);
  }

  #avb-toggle.in span, .avb-toggle-span.in {
    transform: rotate(-90deg);
  }

  .avb-content {
    margin-top: -30px;
    padding-top: 15px;
  }

  .start-screen {
    h2 {
      margin-top: 0;
      font-size:24px;
    }
  }

  .warnings {
    .text-brand-warning {
      display: inline-block;
      background-color: @btn-warning-bg;

      &.flashing, &.flashing-out {
        transition: color .4s ease, background-color .4s ease;
      }

      &.flashing {
        color: @btn-warning-bg !important;
        background-color: @av-primary-contrast !important;
      }
    }

    .text-brand-primary {
      display: inline-block;
      background-color: @btn-primary-bg;
      color: @av-primary-contrast;

      &.flashing, &.flashing-out {
        transition: color .4s ease, background-color .4s ease;
      }

      &.flashing {
        color: @btn-primary-bg !important;
        background-color: @av-primary-contrast !important;
      }
    }
  }

  .input-warn {
    display: block;

    .warn-box {
      background-color: @av-error-bg;
      padding: 17px;
      display: flex;
      flex-direction: row;
      gap: 8px;
      border-radius: 4px;
      line-height: 19px;
      align-items: center;
    }
  }

  .sticky-top {
    display: flex;
    align-items: flex-end;
    position: sticky;
    height: 48px;
    z-index: 8;
    top: 50px;
    background: @bg-primary;
    margin-left: -10px;
    padding-left: 10px;
    margin-right: -10px;
    padding-right: 10px;
  }

  .sticky-top-alt {
    top: 35px;
    height: 122px;
    @media(max-width: @screen-lg-min) {
      top: 130px;
      height: 48px;
    }
  }

  .sticky-padding {
    width: 100%;
    position: sticky;
    height: 20px;
    background-color: @bg-primary;
    top: 55px;
  }

  .actions-extra {
    margin-top: 19px;
    margin-bottom: 2px !important;
  }

  .btn-lg {
    font-size: 16px;
    line-height: 22px;
  }

  .actions {
    margin-bottom: 19px;
    display: flex;
    gap: 85px;
    justify-content: space-between;

    .btn-lg {
      border-radius: 4px;
      flex-basis: 200px;
      display: flex;
      justify-content: center;

      @media(max-width: @screen-xs-max) {
        flex-basis: unset;
      }

      span {
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
      }
    }

    .fa {
      margin-left: 4px;
      margin-right: 4px;
    }

    @media(max-width: @screen-sm-max) {
      gap: 15px;

      .btn-lg {
        font-size: unset;
        line-height: unset;
      }
    }


    @media(max-width: @screen-xs-max) {
      gap: 2px;

      .btn-lg {
        border-radius: unset;
      }
    }
  }

  .btn.btn-warning {
      background-color: @error-primary-color;
      color: @bg-primary;
      border-color: unset;

      &:hover, &:focus {
          background-color: @av-primary-contrast;
          color: @bg-primary;
          border-color: unset;
      }
  }

  .question-title {
    margin-bottom: 20px;
  }


  @media(max-width: @screen-xs-max) {
    .container.container-fixed {
      padding-right: 0;
      padding-left: 0;

      .actions {
        margin-bottom: 1px;
      }
    }
  }

  .election-container {
    flex-grow: 2;
    display: flex;
    flex-direction: column;
  }

  .election-header {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: 33px;
    justify-content: center;
  }

  .election-description {
    color: @grey-darker;
  }

  .election-title, .question-title {
    text-align: center;
    font-weight: 700;
  }

  .election-description, .question-description {
    text-align: left;
  }

  .text-warning.input-error.error-list {
    display: flex;
    flex-direction: column;
    gap: 5px;
    margin-top: 8px;
    max-height: 164px;
    overflow-y: auto;
  }

  .sticky-error {
    position: sticky;
    top: 90px;
    z-index: 8;
    background: @bg-primary;
  }

  .flex-col-12 {
    flex-basis: 100%;
  }
  .flex-col-6 {
      flex-basis: calc(50% - 8px);
  }
  .flex-col-4 {
      flex-basis: calc(33.33% - 16px*2/3);
  }
  .flex-col-3 {
      flex-basis:calc(25% - 12px);
  }

  @media(max-width: @screen-sm-max) {
      .flex-col-12, .flex-col-6, .flex-col-4, .flex-col-3 {
              flex-basis: 100%;
      }
  }

  .categories {
    display: flex;
    flex-direction: row;
    gap: 16px;
    flex-wrap: wrap;
  }
}

@media(min-width: @screen-sm-min) {
  av-booth .avb-top-navbar {
    margin-top: 5px;
  }
}

